navbar and footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title></title>
+    <title>Recipe Reboot</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -39,7 +39,7 @@
   <div class="container-fluid d-flex justify-content-between align-items-center">
 
     <!--<h1 class="logo me-auto me-lg-0"><a href="index.html">Kelly</a></h1>*/-->
-    <a href="index.html" class="logo"><img src="" alt="" class="img-fluid"></a>
+    <a href="index.html" class="logo"><img src="../static/assets/img/Free_Sample_By_Wix.jpeg" alt="" class="img-fluid"></a>
     
 
     <nav id="navbar" class="navbar order-last order-lg-0">
@@ -57,7 +57,7 @@
       <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
-      <button class="openbtn" onclick="openNav()"><i class="bi bi-person-circle"></i></button>
+      
     </div>
 
   </div>
@@ -83,7 +83,7 @@
   <footer  id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span></span></strong>. All Rights Reserved
+        &copy; Copyright Recipe Reboot <strong><span></span></strong>. All Rights Reserved 
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
