create_recipe form

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
       <ul class="menu" >
         <li><a class="active" href="index.html">Home</a></li>
 
-        <li><a href="" >Create Recipe</a></li>
+        <li><a href="create_recipe.html" >Create Recipe</a></li>
         <li><a href="" onclick="">Favourites</a></li>
         <li><a href="" >About</a></li>
 
@@ -73,8 +73,7 @@
 
 
   <!-- ======= Feed Section ======= -->
-  
-    
+ 
 
 
 
