--- a/templates/index.html
+++ b/templates/index.html
@@ -66,14 +66,94 @@
 
 
 
-
-
-  
-
-
-
   <!-- ======= Feed Section ======= -->
   
+<div id ="main">
+
+  <!-- top three recipes -->
+  <div class = "container-sm text-center" style = "margin-top: 120px">
+    <div class = "row align-items-start" id = "selectors">
+      <div class = "col" id = "recipe1" style = "height: 400px">
+        <div class = "recipe_image">
+          <img class = "img-fluid" src = "../static/assets/img/food1.jpg">
+
+          </img>
+          Recipe1
+          <div class = "likes">
+            <button type = "button" id = "like">
+              Like
+            </button>
+            
+          </div>
+        </div>
+
+        <div class = "recipe_name">
+
+        </div>
+      </div>
+      <div class = "col" style = "height: 400px">
+        <div class = "recipe_image">
+          <img class = "img-fluid" src = "../static/assets/img/food2.jpg">
+
+          </img>
+          Recipe2
+          <div class = "likes">
+            <button type = "button" id = "like">
+              Like
+            </button>
+            
+          </div>
+        </div>
+
+        <div class = "recipe_name">
+
+        </div>
+      </div>
+      <div class = "col">
+        <div class = "recipe_image">
+          <img class = "img-fluid" src = "../static/assets/img/food3.jpg">
+
+          </img>
+          Recipe3
+          <div class = "likes">
+            <button type = "button" id = "like">
+              Like
+            </button>
+            
+          </div>
+        </div>
+
+        <div class = "recipe_name">
+
+        </div>
+      </div>
+    </div> 
+  </div>
+
+  <div class = "container-sm text-center" id = "filters">
+    <div class = "row align-items-center">
+      <div class = "col" id = "filter1">
+        Filter by Cost
+      </div>
+      <div class = "col" id = "filter2">
+        Filter by Prep Time
+      </div>
+      <div class = "col" id = "filter3">
+        Filter by Ingredients
+      </div>
+      <div class = "col" id = "filter4">
+        Filter by xxxx
+      </div>
+      <div class = "col" id = "filter5">
+        Filter by xxxx
+      </div>
+    </div>
+    
+
+  </div>
+
+
+</div>
     
 
 
