main page progress 1

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,66 +67,74 @@
 
 
   <!-- ======= Feed Section ======= -->
-<<<<<<< HEAD
   
 <div id ="main">
 
   <!-- top three recipes -->
-  <div class = "container-sm text-center" style = "margin-top: 120px">
+  <div class = "container-sm text-center" style = "margin-top: 0px">
+    <h1>
+      POPULAR RECIPES
+    </h1>
     <div class = "row align-items-start" id = "selectors">
-      <div class = "col" id = "recipe1" style = "height: 400px">
+      <div class = "col" id = "recipe1" >
         <div class = "recipe_image">
-          <img class = "img-fluid" src = "../static/assets/img/food1.jpg">
+          <img class = "img-fluid" src = "../static/assets/img/food1.jpg" style = "object-fit: cover; height: 500px; width: auto">
 
           </img>
-          Recipe1
-          <div class = "likes">
-            <button type = "button" id = "like">
+          recipe1
+          <div class = row>
+            <div class = "col text-start" id = "num_likes">
+              Likes: 15
+            </div>
+            <button type = "button" class = "col-2" id = "likes">
               Like
             </button>
-            
+
           </div>
+        
         </div>
 
         <div class = "recipe_name">
 
         </div>
       </div>
-      <div class = "col" style = "height: 400px">
+      <div class = "col" id = "recipe1" >
         <div class = "recipe_image">
-          <img class = "img-fluid" src = "../static/assets/img/food2.jpg">
+          <img class = "img-fluid" src = "../static/assets/img/food2.jpg" style = "object-fit: cover; height: 500px; width: auto">
 
           </img>
-          Recipe2
-          <div class = "likes">
-            <button type = "button" id = "like">
+          recipe1
+          <div class = row>
+            <div class = "col text-start" id = "num_likes">
+              Likes: 15
+            </div>
+            <button type = "button" class = "col-2" id = "likes">
               Like
             </button>
-            
+
           </div>
+        
         </div>
 
         <div class = "recipe_name">
 
         </div>
       </div>
-      <div class = "col">
-        <div class = "recipe_image">
-          <img class = "img-fluid" src = "../static/assets/img/food3.jpg">
+      <div class = "col" id = "recipe1">
+        <img class = "img-fluid" src = "../static/assets/img/food3.jpg" style = "object-fit: cover; height: 500px; width: auto">
 
-          </img>
-          Recipe3
-          <div class = "likes">
-            <button type = "button" id = "like">
-              Like
-            </button>
-            
+        </img>
+        recipe1
+        <div class = row>
+          <div class = "col text-start" id = "num_likes">
+            Likes: 15
           </div>
-        </div>
+          <button type = "button" class = "col-2" id = "likes">
+            Like
+          </button>
 
-        <div class = "recipe_name">
-
         </div>
+        
       </div>
     </div> 
   </div>
@@ -156,9 +164,6 @@
 
 </div>
     
-=======
- 
->>>>>>> origin/sanjana
 
 
 
