--- a/templates/index.html
+++ b/templates/index.html
@@ -77,24 +77,17 @@
     </h1>
     <div class = "row align-items-start" id = "selectors">
       <div class = "col" id = "recipe1" >
-        <div id = "recipe_image">
-          <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food1.jpg">
-              
+        <div class = "recipe_image">
+          <img class = "img-fluid" src = "../static/assets/img/food1.jpg" style = "object-fit: cover; height: 500px; width: auto">
           </img>
-
-          <div class = "row align-items-center" id = "likes">
-
-            <a id = "like_button" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-              <span id = heart4>
-                <i class="fa  fa-heart-o fa-3x" aria-hidden="true" >
-
-                </i> 
-              </span>
-            </a>
-
-            <div class = "col" id = "like_counter">
-              97
+          <p id="recipe_title_1">recipe1</p>
+          <div class = row>
+            <div class = "col text-start" id = "num_likes_1">
+              Likes: 15
             </div>
+            <button type = "button" class = "col-2" id = "like_button_1">
+              Like
+            </button>
 
           </div>
 
@@ -108,20 +101,14 @@
           <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food2.jpg">
             
           </img>
-
-          <div class = "row align-items-center" id = "likes">
-
-            <a id = "like_button" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-              <span id = heart4>
-                <i class="fa  fa-heart-o fa-3x" aria-hidden="true" >
-
-                </i> 
-              </span>
-            </a>
-
-            <div class = "col" id = "like_counter">
-              97
+          <p id="recipe_title_2">recipe2</p>
+          <div class = row>
+            <div class = "col text-start" id = "num_likes_2">
+              Likes: 15
             </div>
+            <button type = "button" class = "col-2" id = "like_button_2">
+              Like
+            </button>
 
           </div>
 
@@ -131,28 +118,18 @@
           recipe1
         </h>
       </div>
-      <div class = "col" id = "recipe3">
-        <div id = "recipe_image">
-          <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food3.jpg">
-            
-          </img>
+      <div class = "col" id = "recipe1">
+        <img class = "img-fluid" src = "../static/assets/img/food3.jpg" style = "object-fit: cover; height: 500px; width: auto">
 
-          <div class = "row align-items-center" id = "likes">
-
-            <a id = "like_button" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-              <span id = heart4>
-                <i class="fa  fa-heart-o fa-3x" aria-hidden="true" >
-
-                </i> 
-              </span>
-            </a>
-
-            <div class = "col" id = "like_counter">
-              97
-            </div>
-
+        </img>
+        <p id="recipe_title_3">recipe3</p>
+        <div class = row>
+          <div class = "col text-start" id = "num_likes_3">
+            Likes: 15
           </div>
-
+          <button type = "button" class = "col-2" id = "like_button_3">
+            Like
+          </button>
 
         </div> 
         <h id = "recipe_name">
@@ -221,9 +198,31 @@
   <script src="../static/assets/vendor/php-email-form/validate.js"></script>
 
   <!--  Main JS File -->
-  <script src="../static/assets/js/main.js"></script>
+  <script type="module">
+    import database from "../static/assets/js/res/database_parsing/queries.js"
 
+    export function load_recipe() {
+      // Gets all the recipes
+        const recipes = database.get_all_recipes();
+        for (let i = 0; i < 3 && recipes[i] != undefined; i++) {
+          const index = i + 1;
+          const recipe_title = "recipe_title_" + index
+          $('#' + recipe_title).html(recipes[i].name)
 
+          const recipe_likes = "num_likes_" + index
+          $('#' + recipe_likes).html(recipes[i].likes + " Likes")
+
+          const like_button = "like_button_" + index;
+          $('#' + like_button).click(
+            function() {
+              database.like_recipe(recipes[i].name);
+            }
+          )
+        }
+    }
+
+    window.onload = load_recipe();
+  </script>
 </body>
 
 </html>
