--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,5 +1,5 @@
 #header {
-    background: #fefefe;
+    background: #FDFAF6;
     box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.092);
     z-index: 997;
     padding: 5px 0;
@@ -35,14 +35,16 @@
     font-family: "Trirong", serif;
     color: #273d2f;
     margin: 0;
-      min-height: 100%;
-      background-color: #fefefe;
+    min-height: 100%;
+
+    /* background-color: #FDFAF6; */
   }
 
+  
 
   #footer {
     width: 100vw;
-    background: #fefefe;
+    background: #FDFAF6;
     box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.055);
     padding: 30px 0;
     color: #273d2f;
@@ -86,7 +88,7 @@
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 400;
-    color:  #111314;
+    color:  #064420;
     white-space: nowrap;
     transition: 0.3s;
     position: relative;
@@ -103,7 +105,7 @@
     height: 1px;
     bottom: -5px;
     left: 0;
-    background-color: #6a998a;
+    background-color: #E4EFE7;
     visibility: hidden;
     width: 0px;
     transition: all 0.3s ease-in-out 0s;
@@ -114,7 +116,7 @@
   }
   
   .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-    color: #8abdb9;
+    color: #064420;
   }
   .navbar .dropdown ul {
     display: block;
@@ -126,7 +128,7 @@
     z-index: 99;
     opacity: 0;
     visibility: hidden;
-    background: #fefefe;
+    background: #FDFAF6;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.3s;
     border-radius: 4px;
@@ -185,7 +187,72 @@
     left: 100%;
     visibility: visible;
   }
+
+  .create_recipe h1 {
+    font-family: "Trirong", serif;
+    
+    color:  #064420;
+    font-size: 30px;
+    text-align: center;
+
+  }
+  .create_recipe {
+    margin-bottom: 100px;
+  }
+
   
+  .create_recipe select {
+    background-color: #064420;
+    color: #E4EFE7;
+    padding-left: 10px;
+    margin-right: 20px;
+    font-size: 16px;
+    font-family: "Trirong", serif;
+    border-radius: 20;
+    
+  }
+
+  .create_recipe .select-items{
+    background-color: #E4EFE7;
+    color:#064420;
+  }
+
+select::-webkit-scrollbar {
+    width: 8px;
+    background: #064420;
+    color: #E4EFE7;
+    border-radius: 0 8px 8px 0;
+  }
+  
+  select::-webkit-scrollbar-thumb {
+    background: #064420;
+    color: #E4EFE7;
+    border-radius: 0 8px 8px 0;
+  }
+
+
+  
+  .create_recipe label,p {
+    font-family: "Trirong", serif;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: italic;
+    color:#064420;
+  }
+
+  .add_image {
+    margin-top: 30px;
+  }
+
+  .create_recipe p,form {
+    text-align: center;
+  }
+  
+  
+  .recipe_form form { 
+    margin: 0 auto; 
+    width:300px;
+    }
   
   @media (max-width: 1366px) {
     .navbar .dropdown .dropdown ul {
@@ -196,3 +263,133 @@
     }
   }
   
+
+  .back-to-top {
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 30px;
+    z-index: 996;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    transition: all 0.4s;
+  }
+  .back-to-top i {
+    font-size: 30px;
+    color: #232425;
+    line-height: 0;
+  }
+  .back-to-top:hover {
+    background: #d7d5d5;
+    color: #FDFAF6;
+  }
+  .back-to-top.active {
+    visibility: visible;
+    opacity: 1;
+  }
+
+
+   #btn,button:hover {
+    background-color:#E4EFE7;
+    border-color: #E4EFE7;
+    color: #064420;
+  
+  }
+
+  
+
+   select:hover {
+    color: #064420;
+    background: #E4EFE7;
+    border-color: #E4EFE7;
+    } 
+  
+  #btn,button:focus {
+    outline-color: transparent;
+  outline-style:solid;
+  box-shadow: 0 0 0 3px #b7dec1;
+  
+  }
+
+  select:focus {
+    outline-color: transparent;
+  outline-style:solid;
+  box-shadow: 0 0 0 3px #b7dec1;
+  
+  }
+
+
+   #btn,button {
+    /* margin-top: 15px; */
+    float:right;
+
+    padding-right: 10px ;
+    padding-left:10px;
+    padding-bottom:10px;
+    border-radius: 5px;
+    height:30px;
+    width: auto;
+    background: #064420;
+    color: #E4EFE7;
+    font-size: 18px;
+  
+  }
+
+
+  /* The container must be positioned relative: */
+.custom-select {
+  position: relative;
+  font-family: Arial;
+}
+
+
+
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  color: #064420;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: #E4EFE7;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
