--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
   <div class="container-fluid d-flex justify-content-between align-items-center">
 
     <!--<h1 class="logo me-auto me-lg-0"><a href="index.html">Kelly</a></h1>*/-->
-    <a href="index.html" class="logo"><img src="../static/assets/img/Free_Sample_By_Wix.jpeg" alt="" class="img-fluid"></a>
+    <a href="index.html" class="logo"><img src="../static/assets/img/Free_Sample_By_Wix (1).jpeg" alt="" class="img-fluid"></a>
     
 
     <nav id="navbar" class="navbar order-last order-lg-0">
@@ -66,14 +66,104 @@
 
 
 
-
-
-  
-
-
-
   <!-- ======= Feed Section ======= -->
- 
+  
+<div id ="main">
+
+  <!-- top three recipes -->
+  <div class = "container-sm text-center" style = "margin-top: 0px">
+    <h1>
+      POPULAR RECIPES
+    </h1>
+    <div class = "row align-items-start" id = "selectors">
+      <div class = "col" id = "recipe1" >
+        <div class = "recipe_image">
+          <img class = "img-fluid" src = "../static/assets/img/food1.jpg" style = "object-fit: cover; height: 500px; width: auto">
+
+          </img>
+          recipe1
+          <div class = row>
+            <div class = "col text-start" id = "num_likes">
+              Likes: 15
+            </div>
+            <button type = "button" class = "col-2" id = "likes">
+              Like
+            </button>
+
+          </div>
+        
+        </div>
+
+        <div class = "recipe_name">
+
+        </div>
+      </div>
+      <div class = "col" id = "recipe1" >
+        <div class = "recipe_image">
+          <img class = "img-fluid" src = "../static/assets/img/food2.jpg" style = "object-fit: cover; height: 500px; width: auto">
+
+          </img>
+          recipe1
+          <div class = row>
+            <div class = "col text-start" id = "num_likes">
+              Likes: 15
+            </div>
+            <button type = "button" class = "col-2" id = "likes">
+              Like
+            </button>
+
+          </div>
+        
+        </div>
+
+        <div class = "recipe_name">
+
+        </div>
+      </div>
+      <div class = "col" id = "recipe1">
+        <img class = "img-fluid" src = "../static/assets/img/food3.jpg" style = "object-fit: cover; height: 500px; width: auto">
+
+        </img>
+        recipe1
+        <div class = row>
+          <div class = "col text-start" id = "num_likes">
+            Likes: 15
+          </div>
+          <button type = "button" class = "col-2" id = "likes">
+            Like
+          </button>
+
+        </div>
+        
+      </div>
+    </div> 
+  </div>
+
+  <div class = "container-sm text-center" id = "filters">
+    <div class = "row align-items-center">
+      <div class = "col" id = "filter1">
+        Filter by Cost
+      </div>
+      <div class = "col" id = "filter2">
+        Filter by Prep Time
+      </div>
+      <div class = "col" id = "filter3">
+        Filter by Ingredients
+      </div>
+      <div class = "col" id = "filter4">
+        Filter by xxxx
+      </div>
+      <div class = "col" id = "filter5">
+        Filter by xxxx
+      </div>
+    </div>
+    
+
+  </div>
+
+
+</div>
+    
 
 
 
