Fixed Navbar weirdness

--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -44,11 +44,11 @@
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul class="menu" >
-        <li><a  href="index.html">Home</a></li>
+        <li class="navbar_button"><a  href="index.html">Home</a></li>
 
-        <li><a class="active" href="create_recipe.html" >Create Recipe</a></li>
-        <li><a href="" onclick="">Favourites</a></li>
-        <li><a href="" >About</a></li>
+        <li class="navbar_button"><a class="active" href="create_recipe.html" >Create Recipe</a></li>
+        <li class="navbar_button"><a href="" onclick="">Favourites</a></li>
+        <li class="navbar_button"><a href="" >About</a></li>
 
       </ul>
     </nav><!-- .navbar -->
@@ -86,12 +86,7 @@
           
     </div>
         
-    <div style="margin-left: 25%" class="recipe_form">
-        
-
-       
-      
-         
+    <div style="margin-left: 25%" class="recipe_form">         
             <div  id="Order"  class="col-md-8 order-md-1">
               <form class="needs-validation" novalidate>
                 
@@ -208,17 +203,10 @@
               <div class="invalid-feedback">
                 Please enter a valid pharmacy number.
               </div>
-            </div>
-  
-          
+            </div>       
         
-            <button style="margin-right:20%; float:right; padding-bottom:10px;" type="button" >Save</button> 
-          
-            
+            <button style="margin-right:20%; float:right; padding-bottom:10px;" type="button" >Save</button>             
         </form>
-
-        <button style= "margin-top: 40px; " type="button"  class="lead"   >Save</button>
-
       </div>
           
     </div>
