--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
 
     // Generates a food 
     function generate_food_div(index) {
-      return `<div class = 'col' id = 'recipe1' >
+      return `<div class = 'food_div' id = 'recipe1' >
         <div id = 'recipe_image'>
           <img class = 'img-fluid' id = 'recipe_image' src = '../static/assets/img/food2.jpg'>
           </img>
