--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -100,9 +100,20 @@
 
   #filters{
     background-color: #E4EFE7;
-    height: 50px;
-    width: 100%;
+    height: 100px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
   }
+
+  .filter{
+    width: 200px;
+  }
+
+
 
   /**
 * Desktop Navigation 
