fixed scrolling horizontally

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
     function generate_food_div(index) {
       return `<div class = 'col food_div' id = 'recipe1' >
         <div id = 'recipe_image'>
-          <img class = 'img-fluid' id = 'recipe_image' src = '../static/assets/img/food2.jpg'>
+          <img class = 'img-fluid food_image' id = 'recipe_image' src = '../static/assets/img/food2.jpg'>
           </img>
           <div class = 'row align-items-center' id = 'likes'>
             <a class='like_button' id = 'like_button_` + index + `' data-gallery='portfolioGallery' class='col feed-lightbox'>
@@ -163,7 +163,7 @@
       let total_text = "";
 
       //Adds the row organizer
-      total_text += "<div class = 'row align-items-start' id = 'selectors'>"
+      total_text += "<div class = 'row align-items-start food_row_maker' id = 'selectors'>"
       for (let i = 0; i < recipes.length; i++) {
         total_text += generate_food_div((i + 1));
       }
