--- a/templates/index.html
+++ b/templates/index.html
@@ -177,18 +177,24 @@
         $('#' + recipe_title).html(recipes[i].name)
 
         const recipe_likes = "num_likes_" + index
-        $('#' + recipe_likes).html(recipes[i].likes + " Likes")
+        $('#' + recipe_likes).html(recipes[i].likes)
 
         const like_button = "heart_" + index;
         $('#' + like_button).click(
           function() {
+            let the_index = index; 
             if ($('#' + like_button).hasClass("liked")) {
               $('#' + like_button).removeClass("liked")
             } else {
               $('#' + like_button).addClass("liked")
-            }
-            ;
+            };
             database.like_recipe(recipes[i].name);
+            console.log("Here!");
+            console.log(the_index)
+
+            let recipe_likes = "num_likes_" + the_index
+            $('#' + recipe_likes).html(recipes[i].likes)
+
           }
         )
       }
