--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,9 @@
 
     <div id="search_bar">
       <input type = "text" placeholder="Find Recipes">
-      <i class = "fa fa-search"></i>
+      <a href = "results_page.html">
+        <i class = "fa fa-search"></i>
+      </a>
     </div>
 
 
@@ -78,28 +80,8 @@
     <h1>
       POPULAR RECIPES
     </h1>
-<<<<<<< HEAD
-    <div class = "row align-items-start" id = "selectors">
-      <div class = "col" id = "recipe1" >
-        <div id = "recipe_image">
-          <img class = "img-fluid" id = "recipe_image" src = "../static/assets/img/food1.jpg">
-              
-          </img>
 
-          <div class = "row align-items-center" id = "likes">
-
-            <a id = "like_button" href="http://127.0.0.1:5000/heart" data-gallery="portfolioGallery" class="col feed-lightbox">
-              <span id = heart4>
-                <i class="fa fa-heart-o fa-3x" aria-hidden="true" >
-
-                </i> 
-              </span>
-            </a>
-
-            <div class = "col" id = "like_counter">
-              97
-=======
-    <div id="recipe_super_div">
+    <div id="container-fluid recipe_super_div">
       <div class = "row align-items-start" id = "selectors">
         <div class = "col" id = "recipe1" >
           <div id = "recipe_image">
@@ -114,7 +96,6 @@
               </a>
               <div class="like-counter" id = "num_likes_1">
               </div>
->>>>>>> origin/sanjana
             </div>
           </div> 
           <h class = "recipe_name" id = "recipe_title_1">
